--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,11 @@
 body {
   width: 100%;
 }
+
+.panel {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
