Removed nav from app and routing buttons work

--- a/client/style.css
+++ b/client/style.css
@@ -2,11 +2,12 @@ body {
   width: 100%;
 }
 
-.panel {
+.search {
   position: fixed;
   top: 50%;
   left: 50%;
   margin-top: -50px;
   margin-left: -100px;
 }
+
 
