--- a/client/style.css
+++ b/client/style.css
@@ -44,7 +44,6 @@ FORMS
    font-size: 23px;
 }
 
-
 .spacing {
   margin-top: 20px;
 }
@@ -67,5 +66,11 @@ MAIN
   padding: 10px;
   border-radius: 5px;
   color: #888;
+}
+
+.map-gic {
+    margin: 0 auto;
+    height: 500px;
+    width: 500px;
 }
 
