--- a/client/style.css
+++ b/client/style.css
@@ -62,6 +62,10 @@ MAIN
 ***********************/
 
 .card {
-  display: block;
+  background: #ffc;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  color: #888;
 }
 
