--- a/client/style.css
+++ b/client/style.css
@@ -69,8 +69,23 @@ MAIN
 }
 
 .map-gic {
-    margin: 0 auto;
-    height: 500px;
-    width: 500px;
+  margin-top:20px;
+  border-style: solid;
+  border-color: white;
+  border-width: 7px;
+  margin: 0 auto;
+  height: 500px;
+  width: 500px;
+}
+
+.mapbutton {
+    margin-top:20px;
+}
+
+.mapgreeting {
+  text-align: center;
+  border-radius: 0px;
+  color: orange;
+  background-color: white;
 }
 
