--- a/client/style.css
+++ b/client/style.css
@@ -12,7 +12,7 @@ body, html {
 }
 
 body {
-  background: radial-gradient(ellipse, rgba(255,255,255,0.25), rgba(255,255,255,0.9)), url('../assets/vegetables-for-food-wide.jpg');
+  background: radial-gradient(ellipse, rgba(255,255,255,0.25), rgba(255,255,255,0.9)), url('http://www.allyourbasearebelongtous.com/gif/allyourbase.gif');
   background-size: cover;
   background-position: 80% 90%;
 }
