--- a/client/style.css
+++ b/client/style.css
@@ -18,12 +18,99 @@ body {
 }
 
 .container {
-  background: radial-gradient(ellipse, rgba(255,255,255, 1), rgba(255,255,255, 0.75));
+  margin-top: 50px;
+  margin-bottom: -75px;
+  background: radial-gradient(ellipse, rgba(255,255,255, .7), rgba(255,255,255, 0.4));
   padding: 5% 0;
   position: absolute;
+  top:0%;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+/***********************
+
+FOOTER
+
+***********************/
+.container:after {
+  content: "";
+  display: block;
+  height: 75px;
+}
+
+.container2 {
+  margin: 0 auto;
+  padding: 0 24px;
   top:8%;
   width: 100%;
   border-radius: 5px;
+}
+
+.footer {
+  background-color: rgba(58,58,60,0.8);
+  height: 75px;
+  width: 100%;
+  position:fixed;
+  bottom: 0%;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.footer__heading {
+  margin-bottom: 12px;
+  color: #fff;
+  font-weight: 400;
+}
+
+.footer__heading a {
+  color: #23B5AF;
+}
+
+.footer__copyright {
+  color: #B2CCCC;
+}
+
+/***********************
+
+HEADER
+
+***********************/
+
+.header-main {
+  background-color: rgba(58,58,60,0.8);
+  height: 50px;
+  width: 100%;
+  position:absolute;
+  top: 0%;
+  text-align: center;
+}
+
+.header-main__inner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-main__logo {
+  width: 50px;
+}
+
+.header-main__logo img {
+  display: block;
+  margin: 0;
+  width: 100%;
+  height: auto;
 }
 
 /***********************
@@ -111,6 +198,7 @@ MAP
 }
 
 .mapgreeting {
+  margin-top: 50px;
   opacity: 0.8;
   text-align: center;
   border-radius: 0px;
@@ -120,9 +208,11 @@ MAP
 }
 
 .mapdiv {
+  padding: 5% 0;
   margin: 0 auto;
   width:300px;
   height:auto;
+  margin-bottom: 75px;
 }
 
 .gm-style-iw {
@@ -191,5 +281,10 @@ Login
 
 .fb-logo {
   max-width: 20%;
+}
+
+
+.fb-button {
+  font-size: 16px;
 }
 
