Profile page is working. Working on FB profile pic refresh issue

--- a/client/style.css
+++ b/client/style.css
@@ -411,3 +411,20 @@ Login
   font-size: 16px;
 }
 
+/***********************
+
+Profile
+
+***********************/
+
+.fb-profile {
+  margin-top: -40px;
+}
+
+.usr-msg {
+  margin-top: 30px;
+}
+
+
+
+
