--- a/client/style.css
+++ b/client/style.css
@@ -29,6 +29,18 @@ body {
   border-radius: 5px;
 }
 
+a {
+  color: #1b8a86;
+}
+a:hover {
+  text-decoration: none;
+  color: #cc8400;
+}
+
+.btn {
+  box-shadow: inset -2px -2px 10px 2px rgba(0,0,0,.2);
+}
+
 /***********************
 
 FOOTER
@@ -257,11 +269,12 @@ MAIN
 
 .card {
   position: relative;
-  background: #ffc;
+  background: rgba(255,255,255,0.8);
   margin: 10px 0;
   padding: 10px;
   border-radius: 5px;
   color: #888;
+  box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);
 }
 
 .card img {
@@ -279,6 +292,10 @@ MAIN
   color: #f66;
   font-size: 20px;
   cursor: pointer;
+}
+
+.btn.second {
+  margin-top: 15px;
 }
 /***********************
 
@@ -379,7 +396,6 @@ DISPLAY
 
 .restaurant-name {
   font-size: 12px;
-  color: #777;
 }
 
 .highlighted {
@@ -394,6 +410,10 @@ DISPLAY
 .display.container h4 {
   text-align: center;
   font-weight: bold;
+}
+
+.picture {
+  cursor: pointer;
 }
 
 /***********************
