--- a/client/style.css
+++ b/client/style.css
@@ -384,6 +384,12 @@ DISPLAY
   text-align: center;
 }
 
+.message {
+  display: none;
+  color: #777;
+  text-align: center;
+}
+ 
 .display-error {
   background: rgba(255,100,100,0.5);
   text-align: center;
