--- a/client/style.css
+++ b/client/style.css
@@ -343,7 +343,18 @@ MAP
 }
 
 .iw-img {
-  height:50px;
+  height:75px;
+}
+
+.iw-title {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  padding: 10px;
+  background-color: #48b5e9;
+  color: white;
+  margin: 1px;
+  border-radius: 2px 2px 0 0;
 }
 
 /***********************
