--- a/client/style.css
+++ b/client/style.css
@@ -20,13 +20,11 @@ body {
 .container {
   margin-top: 50px;
   margin-bottom: -55px;
-  /*background: radial-gradient(ellipse, rgba(255,255,255, .7), rgba(255,255,255, 0.4));*/
   padding: 5% 0;
   position: absolute;
-  top:0%;
+  top:0;
   width: 100%;
   height: 100%;
-  border-radius: 5px;
 }
 
 a {
@@ -39,6 +37,10 @@ a:hover {
 
 .btn {
   box-shadow: inset -2px -2px 10px 2px rgba(0,0,0,.2);
+}
+
+img.img-thumbnail {
+  box-shadow: 0 0 10px 1px rgba(0,0,0,0.2);
 }
 
 /***********************
@@ -363,30 +365,27 @@ DISPLAY
 
 ***********************/
 
-.center div{
-  margin: 0 auto;
+.center {
+  margin: 0 auto 15px;
   text-align: center;
-  background: rgba(255,255,255,0.25);
-  height: 200px;
+  background: rgba(255,255,255,0.5);
+  box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);
 }
 
-.center div p {
+.slide {
+  height: 200px;
+  padding-top: 10px;
+}
+.center div p, .restaurant-name {
   font-size: 14px;
   white-space: nowrap;
   overflow: hidden;
   margin: 0;
-
 }
 
 .center span div {
   font-size:16px;
   height: 20px;
-}
-
-.center div img{
-  margin: 0 auto;
-  height: 50%;
-  max-width: 100%;
 }
 
 .category {
@@ -425,7 +424,8 @@ DISPLAY
 
 .display.container {
   top: 0;
-  padding: 20px 0;
+  padding: 10px 0;
+  margin-bottom: 100px;
 }
 
 .display.container h4 {
@@ -435,6 +435,9 @@ DISPLAY
 
 .picture {
   cursor: pointer;
+  margin: 0 auto;
+  height: 50%;
+  max-width: 100%;
 }
 
 /***********************
