--- a/client/style.css
+++ b/client/style.css
@@ -13,8 +13,8 @@ body, html {
 
 body {
   background: radial-gradient(ellipse, rgba(255,255,255,0.5), rgba(255,255,255,0.9)), url('../assets/vegetables-for-food-wide.jpg');
-  background-size: cover;
-  background-position: 80% 90%;
+  background-attachment: fixed;
+  background-position: 70% 90%;
 }
 
 .container {
@@ -36,7 +36,11 @@ a:hover {
 }
 
 .btn {
-  box-shadow: inset -2px -2px 10px 2px rgba(0,0,0,.2);
+  /*box-shadow: inset -2px -2px 10px 2px rgba(0,0,0,.2);*/
+  border-radius: 25px;
+  background-color: orange;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 img.img-thumbnail {
@@ -263,6 +267,10 @@ FORMS
    text-align: center;
 }
 
+.icon {
+  margin-right: 20px;
+}
+
 /***********************
 
 MAIN
@@ -292,7 +300,7 @@ MAIN
   top: 5px;
   right: 5px;
   color: #f66;
-  font-size: 20px;
+  font-size: 24px;
   cursor: pointer;
 }
 
