--- a/client/style.css
+++ b/client/style.css
@@ -13,18 +13,20 @@ body, html {
 
 body {
   background: radial-gradient(ellipse, rgba(255,255,255,0.5), rgba(255,255,255,0.9)), url('../assets/vegetables-for-food-wide.jpg');
-  background-attachment: fixed;
-  background-position: 70% 90%;
+  background-size: cover;
+  background-position: 80% 90%;
 }
 
 .container {
   margin-top: 50px;
   margin-bottom: -55px;
+  /*background: radial-gradient(ellipse, rgba(255,255,255, .7), rgba(255,255,255, 0.4));*/
   padding: 5% 0;
   position: absolute;
-  top:0;
+  top:0%;
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
 
 a {
@@ -36,15 +38,7 @@ a:hover {
 }
 
 .btn {
-  /*box-shadow: inset -2px -2px 10px 2px rgba(0,0,0,.2);*/
-  border-radius: 25px;
-  background-color: orange;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-
-img.img-thumbnail {
-  box-shadow: 0 0 10px 1px rgba(0,0,0,0.2);
+  box-shadow: inset -2px -2px 10px 2px rgba(0,0,0,.2);
 }
 
 .readonly {
@@ -271,10 +265,6 @@ FORMS
    text-align: center;
 }
 
-.icon {
-  margin-right: 20px;
-}
-
 /***********************
 
 MAIN
@@ -304,7 +294,7 @@ MAIN
   top: 5px;
   right: 5px;
   color: #f66;
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
 }
 
@@ -362,7 +352,7 @@ MAP
 
 .iw-title {
   font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: 400;
   padding: 10px;
   background-color: #48b5e9;
@@ -377,28 +367,31 @@ DISPLAY
 
 ***********************/
 
-.center {
-  margin: 0 auto 15px;
+.center div{
+  margin: 0 auto;
   text-align: center;
   background: rgba(255,255,255,0.5);
   box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);
   height: 200px;
 }
 
-.slide {
-  height: 200px;
-  padding-top: 10px;
-}
-.center div p, .restaurant-name {
+.center div p {
   font-size: 14px;
   white-space: nowrap;
   overflow: hidden;
   margin: 0;
+
 }
 
 .center span div {
   font-size:16px;
   height: 20px;
+}
+
+.center div img{
+  margin: 0 auto;
+  height: 50%;
+  max-width: 100%;
 }
 
 .category {
@@ -415,6 +408,13 @@ DISPLAY
   display: none;
   color: #777;
   text-align: center;
+  animation:message 0.5s 1;
+  -webkit-animation:message 0.5s 1;
+  animation-fill-mode: forwards;
+
+  animation-delay:2s;
+  -webkit-animation-delay:1s; /* Safari and Chrome */
+  -webkit-animation-fill-mode: forwards;
 }
  
 .display-error {
@@ -437,8 +437,7 @@ DISPLAY
 
 .display.container {
   top: 0;
-  padding: 10px 0;
-  margin-bottom: 100px;
+  padding: 20px 0;
 }
 
 .display.container h4 {
@@ -448,9 +447,6 @@ DISPLAY
 
 .picture {
   cursor: pointer;
-  margin: 0 auto;
-  height: 50%;
-  max-width: 100%;
 }
 
 /***********************
