--- a/client/style.css
+++ b/client/style.css
@@ -341,6 +341,12 @@ MAIN
 .btn.second {
   margin-top: 15px;
 }
+
+.directions {
+  color: #777;
+  text-align: center;
+  font-weight: 500;
+}
 /***********************
 MAP
 ***********************/
