Add google icon

--- a/client/style.css
+++ b/client/style.css
@@ -509,3 +509,12 @@ Profile
   margin-top: 30px;
 }
 
+/***********************
+Restaurant
+***********************/
+
+.glogo {
+  width: 40px;
+  margin-right: 10px;
+}
+
