--- a/client/style.css
+++ b/client/style.css
@@ -174,6 +174,7 @@ HEADER
 }
 
 .header-main__user-details {
+  z-axis: 10;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
