--- a/client/style.css
+++ b/client/style.css
@@ -159,6 +159,8 @@ HEADER
 
 .header-main__user-avatar {
   margin-left: 10px;
+  top: 7px;
+  right: 0;
   width: 36px;
   height: 36px;
   border-radius: 50%;
@@ -182,11 +184,11 @@ HEADER
   margin: 0;
   color: white;
   font-weight: 300;
-  right: 0;
-  width: 50px;
+  right: 50px;
+  width: auto;
   height: auto;
   position: absolute;
-  top: 0;
+  top: 15px;
 
 }
 
