Change google logo

--- a/client/style.css
+++ b/client/style.css
@@ -514,7 +514,9 @@ Restaurant
 ***********************/
 
 .glogo {
-  width: 40px;
+  position: relative;
+  top: -5px;
+  height: 30px;
   margin-right: 10px;
 }
 
