Added history map button in profile page and styled it.

--- a/client/style.css
+++ b/client/style.css
@@ -487,6 +487,12 @@ Profile
 
 .usr-msg {
   margin-top: 30px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.hist-btn {
+  margin-top: 5%;
 }
 
 /***********************
