--- a/client/style.css
+++ b/client/style.css
@@ -165,7 +165,7 @@ HEADER
   border-radius: 50%;
   display: none;
   position: absolute;
-
+  cursor: pointer;
 }
 
 .header-main__user-avatar img {
@@ -187,7 +187,7 @@ HEADER
   width: auto;
   height: auto;
   position: absolute;
-  top: 15px;
+  top: 16px;
 
 }
 
