--- a/client/style.css
+++ b/client/style.css
@@ -276,6 +276,7 @@ img.diet-filter {
 
 .allergy_sm {
   width: 35px;
+  margin-left: 5px;
   /*margin: 10px 5px 0;*/
   /*cursor: pointer;*/
   /*-webkit-filter: grayscale(80%);*/
