--- a/client/style.css
+++ b/client/style.css
@@ -157,14 +157,12 @@ HEADER
   z-index: 10;
 }
 
-.nibbler {
+/*.nibbler {
   font-weight: 600;
-  left: 50%;
-  position: fixed;
   top: 5px;
   z-index: 10;
   color: white;
-}
+}*/
 
 .header-main__user-avatar {
   margin-left: 10px;
@@ -275,7 +273,7 @@ img.diet-filter {
 }
 
 .allergy_sm {
-  width: 35px;
+  width: 25px;
   margin-left: 5px;
   /*margin: 10px 5px 0;*/
   /*cursor: pointer;*/
@@ -516,7 +514,7 @@ Login
 
 
 .fb-button {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 /***********************
