--- a/client/style.css
+++ b/client/style.css
@@ -200,6 +200,15 @@ HEADER
   cursor: pointer;
 }
 
+.welcome {
+  -webkit-animation: seconds 2.0s forwards;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-delay: 2s;
+  animation: seconds 2.0s forwards;
+  animation-iteration-count: 1;
+  animation-delay: 2s;
+}
+
 /***********************
 FORMS
 ***********************/
@@ -430,12 +439,6 @@ DISPLAY
   height: 30px;
   text-align: center;
 }
-
-/*.message {
-  display: none;
-  color: #777;
-  text-align: center;
-}*/
 
 .message {
   -webkit-animation: seconds 2.0s forwards;
