fix error message display

--- a/client/style.css
+++ b/client/style.css
@@ -443,6 +443,8 @@ DISPLAY
   background: rgba(255,255,255,0.5);
   height: 30px;
   text-align: center;
+  width: 85%;
+  margin: 0 auto;
 }
 
 .message {
